tests/scan/fixtures/validation/negative/clean_go_clean-event-publisher/clean-event-publisher.go
// Package clean-event-publisher is a clean Go module.
package clean-event-publisher

func Hello() string { return "hello" }
